turtleart.circletwo.CircleTwo.scala.error
Compilation error:
CircleTwo:10: error: not found: value baissecrayon
  baissecrayon();
  ^