turtleart.circletwo.CircleTwo.scala.code
override def run()
{
  droite(90);
  leveCrayon();
  avance(60);
  baisseCrayon();
  cercle(60);
  leveCrayon();
  avance(60);
  baissecrayon();
  cercle(120);
}